--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <h1 style="color: black;">Best Place To</h1>
     <h1 style="color: black;">Learn Graphic</h1>
     <h1 style="color: rgb(142, 3, 147);">Design!</h1>
-    <a href="./studentform.html"><button style="height: 40px;width: 150px;position: relative;">Join us now</button></a>
-    <img style="float: right;margin-top: -300px;" height="10%" width="30%" src="./header1.png" alt="">
+    <a href="./studentform.html"><button style="height: 40px;width: 150px;position: relative;">JOIN US NOW</button></a>
+    <img style="float: right;margin-top: -300px;" height="10%" width="30%" src="./header1.png" class="hed">
   </header>
 
-  <section id="services" class="services">
+  <section id="services" class ="services">
     <h4 style="color: grey;margin-left: 45%;">OUR SERVICES</h4>
     <h2>Provided  <snap style="color: rgb(226, 43, 192);">Services</snap></h2>
     <div class="cards">
@@ -63,10 +63,10 @@
   <h2 style="margin-left: 4%;">What You Can <span style="color: rgb(192, 26, 186);">Learn</span></h2>
   <h4 style=" margin-left: 21%;">You just think about TemplateMo whenever you need free CSS template for your business website. </h4>
   <div class="categories">
-    <a href="https://en.wikipedia.org/wiki/Web_development"><input style="height: 40px;align-items: center;" type="text" value="Web Development" readonly></a><br>
-    <a href="https://en.wikipedia.org/wiki/Graphic_design"><input style="height: 40px;align-items: center;" type="text" value="Graphic Design" readonly></a><br>
-    <a href="https://en.wikipedia.org/wiki/Video_editing"><input style="height: 40px;align-items: center;" type="text" value="Video Editing" readonly></a><br> 
-    <a href="https://en.wikipedia.org/wiki/WordPress"><input style="height: 40px;align-items: center;" type="text" value="Word Press" readonly></a><br>
+    <a href="https://en.wikipedia.org/wiki/Web_development">Web_development</a><br>
+    <a href="https://en.wikipedia.org/wiki/Graphic_design">Graphic_design</a><br>
+    <a href="https://en.wikipedia.org/wiki/Video_editing">Video_editing</a><br> 
+    <a href="https://en.wikipedia.org/wiki/WordPress">WordPress</a><br>
   </div>
 </section>
 <section class="var">
